OpenTTY Java Edition 1.16.1
Copyright (C) 2025 - Mr. Lima

[ _Commands_ ]

- `file [filename]`: prints information about file
- 
- 

[ _Updates_ ]

- Directories tree modified
- Initalize script changed to `.initrc`
- Fixed `pushd` invalid directories stacking
- Fixed **Lua** security error that allow access to process **owner** field
- **Lua** functions `io.read` and `io.write` now needs to use `/dev/stdin` and `/dev/stdout`
- Removed default parsers commands `vnt`
- Default title for command `view` now is same of Main Window

[ _Notes_ ]

- Files writed in **/tmp/** will be deleted when MIDlet closes.
- 
- 